--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -119,7 +119,7 @@
   </div>
 </div>
 
-<div class="slider2"><div class="text-block">
+<div class="slider"><div class="text-block">
     <p>
       ფრეზის პირების, ინოვაციური სიახლე. <br />
       PCD (ალმასის) ფრეზების, ლენტური ხერების შედუღება და ალესვა,<br />
@@ -141,4 +141,18 @@
       ფუგანის პირების, ალუმინის, მეტალის და ხის დასამუშავებელი ცირკული ხერხები.
     </p>
   </div>
+</div>
+
+<div class="slider">
+  <div class="text-block">
+    <p>
+      ფრეზის პირების, ინოვაციური სიახლე. <br />
+      PCD (ალმასის) ფრეზების, ლენტური ხერების შედუღება და ალესვა,<br />
+      სტამბის დანების, ფუგანების პირების,<br />
+      "კოპირი" ფრეზების ალესვა, ცირკული ხერხის პირების,<br />
+      ფუგანის პირების, ალუმინის, მეტალის და ხის დასამუშავებელი ცირკული ხერხები.
+    </p>
+  </div>
+<app-horizontal-slider [images]="fourSwiperImages"></app-horizontal-slider> 
+
 </div>
