--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -87,26 +87,10 @@
       </div>
     </div>
   </section>
-
-<!-- <app-horizontal-slider></app-horizontal-slider> -->
-
-
-<!-- unda davamato boostrap da gamoviyeno image sliderze da aseve contact ze rom uketesad gamovides aseve dges rac axsna isac shegvidzlia gamoviyenot (ang11) -->
-
-
-
-
-
-<!-- naxe mwvane bloknotshi chawerili meskhis info da gaecani da imis mixedvit unda imushao darchenili periodi -->
-
-
-
-<!-- dasamatebelia gilakemis moqmedebebi da aseve gverdebi aseve contact is stili da about shi kompaniis info -->
-
-
-
-
-
+  
+<div class="blur"></div>
+<section id="sliders">
+<div class="one-slider">
 <div class="slider">
 <app-horizontal-slider [images]="firstSwiperImages"></app-horizontal-slider> <div class="text-block">
     <p>
@@ -118,7 +102,9 @@
     </p>
   </div>
 </div>
+</div>
 
+<div class="two-slider">
 <div class="slider"><div class="text-block">
     <p>
       ფრეზის პირების, ინოვაციური სიახლე. <br />
@@ -130,7 +116,9 @@
   </div>
 <app-horizontal-slider [images]="secondSwiperImages"></app-horizontal-slider> 
 </div>
+</div>
 
+<div class="one-slider">
 <div class="slider">
 <app-horizontal-slider [images]="thirdSwiperImages"></app-horizontal-slider> <div class="text-block">
     <p>
@@ -142,7 +130,9 @@
     </p>
   </div>
 </div>
+</div>
 
+<div class="two-slider">
 <div class="slider">
   <div class="text-block">
     <p>
@@ -156,3 +146,5 @@
 <app-horizontal-slider [images]="fourSwiperImages"></app-horizontal-slider> 
 
 </div>
+</div>
+</section>
