new style but need changes on resp

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
   <section class="contact">
-  <a class="text">ჩვენი საკონტაქტო ინფორმაცია</a> 
+  <a class="title">ჩვენი საკონტაქტო ინფორმაცია</a> 
     <div class="cards">
         <div class="card red">
             <p class="tip">Gmail</p>
@@ -46,7 +46,7 @@
     <button type="submit" class="submit-btn">Send Message</button>
 </form>
 
-<p>მალე გიპასუხებთ, პასუხი მოხდება 24-საათის განმავლობაში, წინააღმდეგ შემთხვევაში დაგვიკავშირდით ნომერზე</p>
+<p class="emer">მალე გიპასუხებთ, პასუხი მოხდება 24-საათის განმავლობაში, წინააღმდეგ შემთხვევაში დაგვიკავშირდით ნომერზე</p>
 </section>
 <div class="maps">
       <div class="container1">
