add block and also swiper and need to add running line

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,63 @@
 <div class="video-container" id="main">
+  <div class="title-text">
+    <div class="text-3d">Meskhi 2000
+    </div>
+    <p>"ჩვენ ვართ კონცენტრირებული მხოლოდ მომხმარებლის კეთილგანწყობაზე, ამიტომაც ჩვენ გთავაზობთ უმაღლესი ხარისხის მომსახურეობას."</p> 
+</div>
+  <div class="boxs">
 
-    <div class="text-3d">Meskhi 2000</div>
-
-
-    <p>"ჩვენ ვართ კონცენტრირებული მხოლოდ მომხმარებლის კეთილგანწყობაზე, ამიტომაც ჩვენ გთავაზობთ უმაღლესი ხარისხის მომსახურეობას."</p>
-    <!-- <p class="arrow-down">&#8595;</p> -->
-     <div class="arrow-wrapper">
-  <p class="arrow-down">&#8595;</p>
+  <div class="box1"></div>
+  <div class="box2"></div>
+  <div class="box3"></div>
+  <div class="box4"></div>
+  <div class="box5"></div>
+  <div class="box6"></div>
+  <div class="box7"></div>
+  <div class="box8"></div>
+  
 </div>
 
+
+
+     <!-- <div class="arrow-wrapper">
+  <p class="arrow-down">&#8595;</p>
+</div> -->
+
   </div> 
+
+
+
+<!-- <swiper-container navigation="true" pagination="true" pagination-clickable="true" >
+  <swiper-slide>
+    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
+  </swiper-slide>
+  <swiper-slide>
+    <img src="cirkuli/369421033_989795648754152_5942018697328113652_n.jpg" alt="">
+  </swiper-slide>
+  <swiper-slide>
+    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
+  </swiper-slide>
+</swiper-container> -->
+
+<swiper-container
+  class="my-swiper"
+  navigation="true"
+  pagination="true"
+  pagination-clickable="true"
+  loop="true"
+>
+  <swiper-slide>
+    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
+  </swiper-slide>
+  <swiper-slide>
+    <img src="lenturi/7777.JPG" alt="">
+  </swiper-slide>
+  <swiper-slide>
+    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
+  </swiper-slide>
+</swiper-container>
+
+
 
   <div class="glow-ball1"></div>
   <div class="glow-ball2"></div>
@@ -19,7 +67,7 @@
     <div class="container">
       <div class="scroll-animate" id="skills"> 
         <section class="skills-section">
-          <h2 class="skills-title">Skills</h2>
+          <!-- <h2 class="skills-title">Skills</h2> -->
           <div class="skills-container">
               <div class="skill-card scroll-animate" id="skill-1">
                   <div class="skill-icon">
@@ -148,3 +196,5 @@
 </div>
 </div>
 </section>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
