--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,7 +57,7 @@
   </swiper-slide>
 </swiper-container>
 
-
+<!-- add swiper working an add block in home (start) need to add running line (videos)  -->
 
   <div class="glow-ball1"></div>
   <div class="glow-ball2"></div>
