add better swiper and running images need responsive

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,25 @@
   </div> 
 
 
+<section class="sliders">
+<div class="slider">
+  <div class="slider-track">
+    <div class="box box1">1</div>
+    <div class="box box2">2</div>
+    <div class="box box3">3</div>
+    <div class="box box4">4</div>
+  </div>
+</div>
 
+<div class="slider">
+  <div class="slider-track">
+    <div class="box box1">5</div>
+    <div class="box box2">6</div>
+    <div class="box box3">7</div>
+    <div class="box box4">8</div>
+  </div>
+</div>
+</section>
 <!-- <swiper-container navigation="true" pagination="true" pagination-clickable="true" >
   <swiper-slide>
     <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
@@ -39,23 +57,10 @@
   </swiper-slide>
 </swiper-container> -->
 
-<swiper-container
-  class="my-swiper"
-  navigation="true"
-  pagination="true"
-  pagination-clickable="true"
-  loop="true"
->
-  <swiper-slide>
-    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
-  </swiper-slide>
-  <swiper-slide>
-    <img src="lenturi/7777.JPG" alt="">
-  </swiper-slide>
-  <swiper-slide>
-    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
-  </swiper-slide>
-</swiper-container>
+
+
+
+
 
 <!-- add swiper working an add block in home (start) need to add running line (videos)  -->
 
@@ -139,8 +144,26 @@
 <div class="blur"></div>
 <section id="sliders">
 <div class="one-slider">
-<div class="slider">
-<app-horizontal-slider [images]="firstSwiperImages"></app-horizontal-slider> <div class="text-block">
+<div class="sliderr">
+<!-- <app-horizontal-slider [images]="firstSwiperImages"></app-horizontal-slider>  -->
+ <swiper-container
+  class="my-swiper"
+  navigation="true"
+  pagination="true"
+  pagination-clickable="true"
+  loop="true"
+>
+  <swiper-slide>
+    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
+  </swiper-slide>
+  <swiper-slide>
+    <img src="lenturi/7777.JPG" alt="">
+  </swiper-slide>
+  <swiper-slide>
+    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
+  </swiper-slide>
+</swiper-container>
+<div class="text-block">
     <p>
       ფრეზის პირების, ინოვაციური სიახლე. <br />
       PCD (ალმასის) ფრეზების, ლენტური ხერების შედუღება და ალესვა,<br />
@@ -153,7 +176,7 @@
 </div>
 
 <div class="two-slider">
-<div class="slider"><div class="text-block">
+<div class="sliderr"><div class="text-block">
     <p>
       ფრეზის პირების, ინოვაციური სიახლე. <br />
       PCD (ალმასის) ფრეზების, ლენტური ხერების შედუღება და ალესვა,<br />
@@ -162,13 +185,49 @@
       ფუგანის პირების, ალუმინის, მეტალის და ხის დასამუშავებელი ცირკული ხერხები.
     </p>
   </div>
-<app-horizontal-slider [images]="secondSwiperImages"></app-horizontal-slider> 
+<!-- <app-horizontal-slider [images]="secondSwiperImages"></app-horizontal-slider>  -->
+ <swiper-container
+  class="my-swiper"
+  navigation="true"
+  pagination="true"
+  pagination-clickable="true"
+  loop="true"
+>
+  <swiper-slide>
+    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
+  </swiper-slide>
+  <swiper-slide>
+    <img src="lenturi/7777.JPG" alt="">
+  </swiper-slide>
+  <swiper-slide>
+    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
+  </swiper-slide>
+</swiper-container>
 </div>
 </div>
 
 <div class="one-slider">
-<div class="slider">
-<app-horizontal-slider [images]="thirdSwiperImages"></app-horizontal-slider> <div class="text-block">
+<div class="sliderr">
+<!-- <app-horizontal-slider [images]="thirdSwiperImages"></app-horizontal-slider>  -->
+
+<swiper-container
+  class="my-swiper"
+  navigation="true"
+  pagination="true"
+  pagination-clickable="true"
+  loop="true"
+>
+  <swiper-slide>
+    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
+  </swiper-slide>
+  <swiper-slide>
+    <img src="lenturi/7777.JPG" alt="">
+  </swiper-slide>
+  <swiper-slide>
+    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
+  </swiper-slide>
+</swiper-container>
+<div class="text-block">
     <p>
       ფრეზის პირების, ინოვაციური სიახლე. <br />
       PCD (ალმასის) ფრეზების, ლენტური ხერების შედუღება და ალესვა,<br />
@@ -181,7 +240,7 @@
 </div>
 
 <div class="two-slider">
-<div class="slider">
+<div class="sliderr">
   <div class="text-block">
     <p>
       ფრეზის პირების, ინოვაციური სიახლე. <br />
@@ -191,10 +250,26 @@
       ფუგანის პირების, ალუმინის, მეტალის და ხის დასამუშავებელი ცირკული ხერხები.
     </p>
   </div>
-<app-horizontal-slider [images]="fourSwiperImages"></app-horizontal-slider> 
+<!-- <app-horizontal-slider [images]="fourSwiperImages"></app-horizontal-slider>  -->
+ <swiper-container
+  class="my-swiper"
+  navigation="true"
+  pagination="true"
+  pagination-clickable="true"
+  loop="true"
+>
+  <swiper-slide>
+    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
+  </swiper-slide>
+  <swiper-slide>
+    <img src="lenturi/7777.JPG" alt="">
+  </swiper-slide>
+  <swiper-slide>
+    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
+  </swiper-slide>
+</swiper-container>
 
 </div>
 </div>
 </section>
-
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
