new better style

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,275 +1,52 @@
-<div class="video-container" id="main">
-  <div class="title-text">
-    <div class="text-3d">Meskhi 2000
-    </div>
-    <p>"ჩვენ ვართ კონცენტრირებული მხოლოდ მომხმარებლის კეთილგანწყობაზე, ამიტომაც ჩვენ გთავაზობთ უმაღლესი ხარისხის მომსახურეობას."</p> 
-</div>
-  <div class="boxs">
+<!-- New Modern Home Component Structure -->
+<app-navigation></app-navigation>
+<app-hero></app-hero>
+<app-services></app-services>
+<app-gallery></app-gallery>
+<app-contact-section></app-contact-section>
 
-  <div class="box1"></div>
-  <div class="box2"></div>
-  <div class="box3"></div>
-  <div class="box4"></div>
-  <div class="box5"></div>
-  <div class="box6"></div>
-  <div class="box7"></div>
-  <div class="box8"></div>
-  
-</div>
-
-
-
-     <!-- <div class="arrow-wrapper">
-  <p class="arrow-down">&#8595;</p>
-</div> -->
-
-  </div> 
-
-
-<section class="sliders">
-<div class="slider">
-  <div class="slider-track">
-    <div class="box box1">1</div>
-    <div class="box box2">2</div>
-    <div class="box box3">3</div>
-    <div class="box box4">4</div>
-  </div>
-</div>
-
-<div class="slider">
-  <div class="slider-track">
-    <div class="box box1">5</div>
-    <div class="box box2">6</div>
-    <div class="box box3">7</div>
-    <div class="box box4">8</div>
-  </div>
-</div>
-</section>
-<!-- <swiper-container navigation="true" pagination="true" pagination-clickable="true" >
-  <swiper-slide>
-    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
-  </swiper-slide>
-  <swiper-slide>
-    <img src="cirkuli/369421033_989795648754152_5942018697328113652_n.jpg" alt="">
-  </swiper-slide>
-  <swiper-slide>
-    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
-  </swiper-slide>
-</swiper-container> -->
-
-
-
-
-
-
-<!-- add swiper working an add block in home (start) need to add running line (videos)  -->
-
-  <div class="glow-ball1"></div>
-  <div class="glow-ball2"></div>
-  <div class="glow-ball3"></div>                
-  <div class="glow-ball4"></div>
-  <section class="services" id="services">
-    <div class="container">
-      <div class="scroll-animate" id="skills"> 
-        <section class="skills-section">
-          <!-- <h2 class="skills-title">Skills</h2> -->
-          <div class="skills-container">
-              <div class="skill-card scroll-animate" id="skill-1">
-                  <div class="skill-icon">
-                    <i class="fa-solid fa-industry"></i>
-                  </div>
-                  <h3 class="skill-subtitle">დამზადება</h3>
-                  <p class="skill-description">
-                    ვამზადეთ უმაღლესო ხარისხის საჭრისებ, ფრეზებს, ნებისმეირ კონფიგურაციის და მომსახურებოას ვეწევით ცირკული, ლენტური ხერხების, ფრეზების და PCD (ალმასის) ფრეზების გალესვაზე.
-                  </p>
-                  <!-- <button class="more">გაიგეთ მეტი</button> -->
-              </div>
-              <div class="skill-card scroll-animate" id="skill-2">
-                  <div class="skill-icon">
-                    <i class="fa-solid fa-boxes-stacked"></i>
-                  </div>
-                  <h3 class="skill-subtitle">ჩვენი პროდუქტი</h3>
-                  <p class="skill-description">
-                    ვამზადებთ ფრეზებს ნებისმიერ კომფიგურაციაზე.როგორც HSS ასევე "პაბედიტით".
-                  </p>
-                  <!-- <button class="more">გაიგეთ მეტი</button> -->
-              </div>
-
-              <div class="skill-card scroll-animate" id="skill-3">
-                  <div class="skill-icon">
-                    <i class="fa-solid fa-clock"></i>
-                  </div>
-                  <h3 class="skill-subtitle">ინოვაცია</h3>
-                  <p class="skill-description">
-                    ლამასი ხერხებისა და ფრეზების გალესვა.
-                  </p>
-                  <!-- <button class="more">გაიგეთ მეტი</button> -->
-              </div>
-              <div class="skill-card scroll-animate" id="skill-4">
-                  <div class="skill-icon">
-                      <i class="fas fa-hands-helping"></i>
-                  </div>
-                  <h3 class="skill-subtitle">ალესვები</h3>
-                  <p class="skill-description">
-                    ფრეზის პირების,ინოვაციური სიახლე. PCD (ალმასის) ფრეზების,ლენტური ხერების შედუღება და ალესვა,სტამბის დანების ფუგანების პირების,"კოპირი" ფრეზების ალესვა,ცირკული ხერხის პირების,ფუგანის პირების,ალუმინის,მეტალის და ხის დასამუშავებელი ცირკული ხერხები
-                  </p>
-                  <!-- <button class="more">გაიგეთ მეტი</button> -->
-              </div>
-              <div class="skill-card scroll-animate" id="skill-5">
-                <div class="skill-icon">
-                    <i class="fas fa-cogs"></i>
-                </div>
-                <h3 class="skill-subtitle">გამოჩარხვა</h3>
-                <p class="skill-description">
-                  ვჩარავთ ნებისმიერი ფრეზს და დანებს უმაღლეს ხარისხში საუკეთესო დანადგარებით.
-                </p>
-                <!-- <button class="more">გაიგეთ მეტი</button> -->
-              </div>
-              <div class="skill-card scroll-animate" id="skill-6">
-                <div class="skill-icon">
-                    <i class="fas fa-drafting-compass"></i>
-                </div>
-                <h3 class="skill-subtitle">გრავირება</h3>
-                <p class="skill-description">
-                  ვაკეთებთ გრავირებას უმაღლესი ხარისხით უახლესი აპარატურით.
-                </p>
-                <!-- <button class="more">გაიგეთ მეტი</button> -->
-              </div>
-          </div>
-        </section>
+<!-- Footer -->
+<footer class="footer">
+  <div class="container">
+    <div class="footer-content">
+      <div class="footer-section">
+        <h3>Meskhi 2000</h3>
+        <p>უმაღლესი ხარისხის მომსახურეობა თქვენი ბიზნესისთვის</p>
+        <div class="social-links">
+          <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+        </div>
+      </div>
+      
+      <div class="footer-section">
+        <h4>სერვისები</h4>
+        <ul>
+          <li><a href="#services">დამზადება</a></li>
+          <li><a href="#services">ალესვები</a></li>
+          <li><a href="#services">გამოჩარხვა</a></li>
+          <li><a href="#services">გრავირება</a></li>
+        </ul>
+      </div>
+      
+      <div class="footer-section">
+        <h4>კონტაქტი</h4>
+        <ul>
+          <li><i class="fas fa-phone"></i> +995 XXX XXX XXX</li>
+          <li><i class="fas fa-envelope"></i> info&#64;meskhi2000.ge</li>
+          <li><i class="fas fa-map-marker-alt"></i> თბილისი, საქართველო</li>
+        </ul>
+      </div>
+      
+      <div class="footer-section">
+        <h4>სამუშაო საათები</h4>
+        <p>ორშაბათი - პარასკევი: 9:00 - 18:00</p>
+        <p>შაბათი: 9:00 - 14:00</p>
       </div>
     </div>
-  </section>
-  
-<div class="blur"></div>
-<section id="sliders">
-<div class="one-slider">
-<div class="sliderr">
-<!-- <app-horizontal-slider [images]="firstSwiperImages"></app-horizontal-slider>  -->
- <swiper-container
-  class="my-swiper"
-  navigation="true"
-  pagination="true"
-  pagination-clickable="true"
-  loop="true"
->
-  <swiper-slide>
-    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
-  </swiper-slide>
-  <swiper-slide>
-    <img src="lenturi/7777.JPG" alt="">
-  </swiper-slide>
-  <swiper-slide>
-    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
-  </swiper-slide>
-</swiper-container>
-<div class="text-block">
-    <p>
-      ფრეზის პირების, ინოვაციური სიახლე. <br />
-      PCD (ალმასის) ფრეზების, ლენტური ხერების შედუღება და ალესვა,<br />
-      სტამბის დანების, ფუგანების პირების,<br />
-      "კოპირი" ფრეზების ალესვა, ცირკული ხერხის პირების,<br />
-      ფუგანის პირების, ალუმინის, მეტალის და ხის დასამუშავებელი ცირკული ხერხები.
-    </p>
+    
+    <div class="footer-bottom">
+      <p>&copy; 2025 Meskhi 2000. ყველა უფლება დაცულია.</p>
+    </div>
   </div>
-</div>
-</div>
-
-<div class="two-slider">
-<div class="sliderr"><div class="text-block">
-    <p>
-      ფრეზის პირების, ინოვაციური სიახლე. <br />
-      PCD (ალმასის) ფრეზების, ლენტური ხერების შედუღება და ალესვა,<br />
-      სტამბის დანების, ფუგანების პირების,<br />
-      "კოპირი" ფრეზების ალესვა, ცირკული ხერხის პირების,<br />
-      ფუგანის პირების, ალუმინის, მეტალის და ხის დასამუშავებელი ცირკული ხერხები.
-    </p>
-  </div>
-<!-- <app-horizontal-slider [images]="secondSwiperImages"></app-horizontal-slider>  -->
- <swiper-container
-  class="my-swiper"
-  navigation="true"
-  pagination="true"
-  pagination-clickable="true"
-  loop="true"
->
-  <swiper-slide>
-    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
-  </swiper-slide>
-  <swiper-slide>
-    <img src="lenturi/7777.JPG" alt="">
-  </swiper-slide>
-  <swiper-slide>
-    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
-  </swiper-slide>
-</swiper-container>
-</div>
-</div>
-
-<div class="one-slider">
-<div class="sliderr">
-<!-- <app-horizontal-slider [images]="thirdSwiperImages"></app-horizontal-slider>  -->
-
-<swiper-container
-  class="my-swiper"
-  navigation="true"
-  pagination="true"
-  pagination-clickable="true"
-  loop="true"
->
-  <swiper-slide>
-    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
-  </swiper-slide>
-  <swiper-slide>
-    <img src="lenturi/7777.JPG" alt="">
-  </swiper-slide>
-  <swiper-slide>
-    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
-  </swiper-slide>
-</swiper-container>
-<div class="text-block">
-    <p>
-      ფრეზის პირების, ინოვაციური სიახლე. <br />
-      PCD (ალმასის) ფრეზების, ლენტური ხერების შედუღება და ალესვა,<br />
-      სტამბის დანების, ფუგანების პირების,<br />
-      "კოპირი" ფრეზების ალესვა, ცირკული ხერხის პირების,<br />
-      ფუგანის პირების, ალუმინის, მეტალის და ხის დასამუშავებელი ცირკული ხერხები.
-    </p>
-  </div>
-</div>
-</div>
-
-<div class="two-slider">
-<div class="sliderr">
-  <div class="text-block">
-    <p>
-      ფრეზის პირების, ინოვაციური სიახლე. <br />
-      PCD (ალმასის) ფრეზების, ლენტური ხერების შედუღება და ალესვა,<br />
-      სტამბის დანების, ფუგანების პირების,<br />
-      "კოპირი" ფრეზების ალესვა, ცირკული ხერხის პირების,<br />
-      ფუგანის პირების, ალუმინის, მეტალის და ხის დასამუშავებელი ცირკული ხერხები.
-    </p>
-  </div>
-<!-- <app-horizontal-slider [images]="fourSwiperImages"></app-horizontal-slider>  -->
- <swiper-container
-  class="my-swiper"
-  navigation="true"
-  pagination="true"
-  pagination-clickable="true"
-  loop="true"
->
-  <swiper-slide>
-    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
-  </swiper-slide>
-  <swiper-slide>
-    <img src="lenturi/7777.JPG" alt="">
-  </swiper-slide>
-  <swiper-slide>
-    <img src="lenturi/399846244_358388080061629_8178238030818943176_n.jpg" alt="">
-  </swiper-slide>
-</swiper-container>
-
-</div>
-</div>
-</section>
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+</footer>
